--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "build": "npx esbuild ./src/server.ts --bundle --minify --platform=node --outfile=./dist/server.js --packages=external",
+    "start": "npm run build && node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts"
   },
   "keywords": [],
