--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "npm i && npm run build:frontend && npm run build:backend",
     "dev:frontend": "npm run dev -w frontend",
     "dev:backend": "npm run dev -w backend",
-    "dev": "npx npm-run-all --parallel dev:backend dev:frontend"
+    "dev": "npx npm-run-all --parallel dev:backend dev:frontend",
+    "start:frontend": "npm run build -w frontend",
+    "start:backend": "npm start -w backend",
+    "start": "npm run start:frontend && npm run start:backend"
   },
   "private": false,
   "workspaces": [
