--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@types/better-sqlite3": "^7.6.12",
     "@types/express": "^5.0.0",
     "@types/socket.io": "^3.0.1",
+    "esbuild": "^0.25.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
