--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "better-sqlite3": "^11.9.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jimp": "^1.6.0",
     "socket.io": "^4.8.1",
     "unique-names-generator": "^4.7.1"
   },
