--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jimp": "^1.6.0",
+    "openai": "^4.89.0",
     "socket.io": "^4.8.1",
-    "unique-names-generator": "^4.7.1"
+    "unique-names-generator": "^4.7.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
