--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "jimp": "^1.6.0",
-    "next": "^15.2.2",
+    "autoprefixer": "^10.4.21",
+    "next": "^15.2.3",
+    "postcss": "^8.5.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.0.14"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,8 +25,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4.0.14",
+    "eslint-config-next": "15.2.3",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5"
   }
 }
