--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "better-sqlite3": "^11.9.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "imgproxy": "^1.3.0",
     "openai": "^4.89.0",
     "socket.io": "^4.8.1",
     "unique-names-generator": "^4.7.1",
